First_Step/data/46/163/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:12: error: illegal start of expression
        import.java.util.Arrays;
        ^
Tools.java:12: error: illegal start of expression
        import.java.util.Arrays;
              ^
Tools.java:12: error: ';' expected
        import.java.util.Arrays;
                   ^
Tools.java:12: error: not a statement
        import.java.util.Arrays;
                        ^
Tools.java:31: error: ';' expected
        Arrays sort(tab);
                   ^
Tools.java:31: error: not a statement
        Arrays sort(tab);
                    ^
Tools.java:31: error: ';' expected
        Arrays sort(tab);
                       ^
7 errors
Not compiled
--|>
Grade :=>>0.00000
